# agents

./: README.md
skills/github-and-jira/: README.md  SKILL.md  config.json
skills/github-and-jira/scripts/: README.md  get-github-config.sh  resolve-github-user.sh  resolve-jira-user.sh
skills/powerpoint/: QUICKSTART.md  README.md  SKILL.md  pyproject.toml
skills/powerpoint/scripts/: add_images_to_slides.py  add_slides.py  create_presentation.py  create_report.py  extract_content.py
skills/powerpoint/templates/: example_report_data.json
skills/web-research/: SKILL.md
skills/web-research/tools/: fetch  search
